Fixes alignment intro

--- a/style.css
+++ b/style.css
@@ -502,13 +502,9 @@ noscript {
   width: 100%;
   height: calc(100vh - 115px);
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-.flex-container {
-  display: flex;
-  flex-direction: column;
 }
 .text-content {
   display: flex;
